--- a/goffice/goffice-config.h.in
+++ b/goffice/goffice-config.h.in
@@ -115,6 +115,9 @@
 /* Define if the gettimeofday function is available */
 #undef HAVE_GETTIMEOFDAY
 
+/* Define to 1 if you have the `get_gsf_odf_version' function. */
+#undef HAVE_GET_GSF_ODF_VERSION
+
 /* Define to 1 if you have the <grp.h> header file. */
 #undef HAVE_GRP_H
 
